# advanced_cpp_hw1

./: Board.cpp  Board.h  CMakeLists.txt  GameState.cpp  GameState.h  README.md  Tank.cpp  Tank.h  TankAlgorithm.cpp  TankAlgorithm.h  board.txt  board3.txt  board4.txt  game_output.txt  input_b.txt  input_c.txt  input_errors.txt  main.cpp  output_a.txt  output_board3.txt  output_c.txt  output_input_a.txt  tank_game
